kube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zero2prod
  labels:
    name: zero2prod
