kube/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - image: ghcr.io/oliverflecke/zero2prod:v0.2.0
          imagePullPolicy: Never
          name: api
          resources:
            limits:
              memory: 1Gi
              cpu: 1
